--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		svg {
 		  background: white;
 		}
-
+		
 		h2 {
 		  color: blue;
 		  text-align: center;
@@ -15,7 +15,7 @@
 		  top: 5500px;
 		  left: 890px;
 		}
-
+		
 		.boundary {
 		  fill: none;
 		  stroke: #fff;
@@ -116,12 +116,9 @@
 
     <script type="text/javascript">
       function draw(geo_data)
-	  {
-        "use strict";
-		debugger;
-
-
-        var width = 2000,
+	{
+	
+	var width = 2000,
             height = 1100,
             links = [],
 			min_delay = -40,
@@ -140,10 +137,6 @@
                                .translate( [width / 2, height / 2]);
 
 		var catagories = ['On time or arrived early','delayed < 1 hr','delayed > 1 hrs & < than 2 hrs','delayed > 2'];
-
-
-
-		debugger;
 
 
         var svg = d3.select("body")
@@ -241,13 +234,10 @@
 	{
 	// Draw Circle Logic
 
-	debugger;
-
 // for Source circle logic
 		var nestedo = d3.nest()
  				.key(function(d)
 					{
- 					//debugger;
  					return d['Origin'];
  					})
  				.rollup(function(leaves)
@@ -257,23 +247,16 @@
 
 						var city = leaves.map(function(d)
   						    { return d['OCity']});
-             //  debugger;
  						var center_x = d3.mean(coords, function(d)
  							{ return d[0];});
-
-               //debugger;
  						var center_y = d3.mean(coords, function(d)
  							{ return d[1];});
-
-               //debugger;
  						return {
  							'x'		: center_x,
  							'y'		: center_y,
 							'city'  : city}
 					})
  				.entries(data);
-
-		debugger;
 		var orig = svg.append('g')
 			.attr("class", "bubble")
 			.attr("id","orig_id")
@@ -291,133 +274,72 @@
 			.on("mouseover", mouseovero)
 			.on("mouseout", mouseout);
 
-		debugger;
-
 	 function mouseovero(d) {
 
         d3.select(this).style("fill", "white");
           //  d3.select(this).text("city");
 
-            var mousecoord = [0,0];
+     	var mousecoord = [0,0];
 
-			debugger;
-            mousecoord = d3.mouse(this);
+       	mousecoord = d3.mouse(this);
 
-
-			debugger;
-			var flag = 0;
+	var flag = 0;
 
             var text = svg.append('g')
-              .selectAll("text")
-              .data(nestedo)
-              .enter()
-              .append("text") 							// append text
-           /*   .attr("x", function(d)
-                         {return d.values['x']; })
-              .attr("y", function(d)
-                         {return d.values['y']; })*/
-			  .attr("x", mousecoord[0])
-              .attr("y", mousecoord[1])
-			  .attr("dy", -7) 							// set y position of bottom of text
-              .style("fill", "black") 					// fill the text with the colour black
-              .attr("text-anchor", "middle") 			// set anchor y justification
-          //    .text("city");
-           //   .text(function(d) {return d.values['city'];}); // define the text to display
-		          .text(function(d) {
-				debugger;
-				if ((d.values['x'] - mousecoord[0] < 5) && (d.values['y'] - mousecoord[1] < 5) && (flag == 0))
-				{
-					debugger;
-					flag = 1;
-					return d.values['city'][0];
-					debugger;
-				}
-				debugger;
+              	.selectAll("text")
+         	.data(nestedo)
+              	.enter()
+              	.append("text") 				// append text
+		.attr("x", mousecoord[0])
+              	.attr("y", mousecoord[1])
+		.attr("dy", -7) 			// set y position of bottom of text
+              	.style("fill", "black") 			// fill the text with the colour black
+              	.attr("text-anchor", "middle") 		// set anchor y justification
+		.text(function(d) {
+		if ((d.values['x'] - mousecoord[0] < 5) && (d.values['y'] - mousecoord[1] < 5) && (flag == 0))
+		{
+			flag = 1;
+			return d.values['city'][0];
+		}
 									}); // define the text to display
-
-			debugger;
-
-      /*      d3.select("#tooltip")
-                .style("left", mousecoord[0] + "px")
-                .style("top", mousecoord[1]-75 + "px");
-
-            d3.select("#city")
-                .text(d.city)
-
-
-            d3.select("#tooltip").classed("hidden", false);*/
-
-
         };
 
     function mouseoverd(d) {
 
         d3.select(this).style("fill", "white");
-          //  d3.select(this).text("city");
 
-            var mousecoord = [0,0];
+       	var mousecoord = [0,0];
+       	var flag = 0;
 
-			debugger;
-            mousecoord = d3.mouse(this);
-
-
-			debugger;
-			var flag = 0;
-
-            var text1 = svg.append('g')
-              .selectAll("text")
-              .data(nestedd)
-              .enter()
-              .append("text") 							// append text
-           /*   .attr("x", function(d)
-                         {return d.values['x']; })
-              .attr("y", function(d)
-                         {return d.values['y']; })*/
-			  .attr("x", mousecoord[0])
-              .attr("y", mousecoord[1])
-		      .attr("dy", -7) 							// set y position of bottom of text
-              .style("fill", "black") 					// fill the text with the colour black
-              .attr("text-anchor", "middle") 			// set anchor y justification
-          //    .text("city");
-           //   .text(function(d) {return d.values['city'];}); // define the text to display
-		      .text(function(d) {
-				debugger;
-				if ((d.values['x'] - mousecoord[0] < 5) && (d.values['y'] - mousecoord[1] < 5) && (flag == 0))
-				{
-					debugger;
-					flag = 1;
-					return d.values['city'][0];
-					debugger;
-				}
-				debugger;
-									}); // define the text to display
-
-			debugger;
-
-      /*      d3.select("#tooltip")
-                .style("left", mousecoord[0] + "px")
-                .style("top", mousecoord[1]-75 + "px");
-
-            d3.select("#city")
-                .text(d.city)
+       	mousecoord = d3.mouse(this);
 
 
-            d3.select("#tooltip").classed("hidden", false);*/
-
+       	var text1 = svg.append('g')
+          .selectAll("text")
+          .data(nestedd)
+          .enter()
+          .append("text") 							// append text
+          .attr("x", mousecoord[0])
+          .attr("y", mousecoord[1])
+          .attr("dy", -7) 							// set y position of bottom of text
+          .style("fill", "black") 					// fill the text with the colour black
+          .attr("text-anchor", "middle") 			// set anchor y justification
+          .text(function(d) {
+            if ((d.values['x'] - mousecoord[0] < 5) && (d.values['y'] - mousecoord[1] < 5) && (flag == 0)) {
+            	flag = 1;
+            	return d.values['city'][0];
+		}
+	  }); // define the text to display
 
         };
 
         function mouseout(d) {
-
-                d3.select(this).style("fill", "red");
-				svg.selectAll("text").remove()
-                var mousecoord = [0,0];
-                mousecoord = d3.mouse(this);
-
-            };
-
-
-
+          d3.select(this).style("fill", "red");
+          svg.selectAll("text").remove();
+          var mousecoord = [0,0];
+          mousecoord = d3.mouse(this);
+        };
+        
 // for Destination circle logic
 		var nestedd = d3.nest()
  				.key(function(d)
