--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </style>
 
     <script type="text/javascript">
-      function draw(geo_data){
+      function draw(geo_data) {
 
         var width = 2000;
         var height = 1100;
@@ -436,7 +436,7 @@
 	svg.append("text")
 	   .attr("x", x_txt + 45 )
 	   .attr("y", y_txt)	
-	   .text("%"
+	   .text("%")
 	   .attr("font-size",20)
 	   .attr("font-family","serif")
 	   .attr("font-weight","bold");
