--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       top: 5500px;
       left: 890px;
     }
-
     .boundary {
       fill: none;
       stroke: #fff;
@@ -121,15 +120,12 @@
         var m6 = 900;
         var arcop = 0.1
         var bary = 09;
-
         d3.select("body")
           .append("h2")
           .text("2008 USA Flight Stats");
-
         var projection = d3.geo.albersUsa()
                                .scale(1600)
                                .translate( [width / 2, height / 2]);
-
         var catagories = ['On time or arrived early','delayed < 1 hr','delayed > 1 hrs & < than 2 hrs','delayed > 2'];
         var svg = d3.select("body")
                     .append("svg")
@@ -137,9 +133,7 @@
                     .attr("height", height)
                     .append('g')
                     .attr('class', 'map');
-
         var path = d3.geo.path().projection(projection);
-
         var map = svg.selectAll('path')
                  .data(geo_data.features)
                  .enter()
@@ -148,7 +142,6 @@
                  .style('fill', 'lightBlue')
                  .style('stroke', 'black')
                  .style('stroke-width', 0.5);
-
         svg.append("text")
            .attr("x", 10)
            .attr("y", 25)
@@ -157,7 +150,6 @@
            .attr("font-weight","bold")
            .style('fill', 'darkOrange')
            .text("Total Available Arrival Time Percentage:-");
-
         newRect = svg.append("rect")
                      .attr("x", 40)
                      .attr("y", 240)
@@ -165,7 +157,6 @@
                      .attr("height", 80)
                      .attr("fill", "white")
                      .attr("id", "rectLabel");
-
         svg.append("text")
            .attr("x", 45)
            .attr("y", 260)
@@ -174,7 +165,6 @@
            .attr("font-weight","bold")
            .style('fill', 'black')
            .text("Instruction & Notes:-");
-
          svg.append("text")
            .attr("x", 45)
            .attr("y", 285)
@@ -183,7 +173,6 @@
            //.attr("font-weight","bold")
            .style('fill', 'black')
            .text("1.Click on the above buttons to explore air traffic.");
-
          svg.append("text")
            .attr("x", 45)
            .attr("y", 300)
@@ -192,7 +181,6 @@
            //.attr("font-weight","bold")
            .style('fill', 'black')
            .text("2.Mouse over the dots to explore the airport location.");
-
          svg.append("text")
            .attr("x", 45)
            .attr("y", 315)
@@ -201,12 +189,9 @@
            //.attr("font-weight","bold")
            .style('fill', 'black')
            .text("* The size of the dot indicates the Airtraffic");
-
         /* Buttons and logic here */
         var arcGroup  = svg.append("g");
-
         d3.select("#B1 button").on("click", button1_click)
-
         function button1_click() {
           svg.selectAll(".arc_b").remove()
           svg.selectAll(".arc_br").remove()
@@ -229,9 +214,7 @@
           bary = 55;
           d3.csv("2008-new_X.csv",plot_points)
         }
-
         d3.select("#B2 button").on("click", button2_click)
-
         function button2_click() {
           svg.selectAll(".arc_b").remove()
           svg.selectAll(".arc_br").remove()
@@ -254,9 +237,7 @@
           bary = 95;
           d3.csv("2008-new_X.csv",plot_points)
         }
-
         d3.select("#B3 button").on("click", button3_click)
-
         function button3_click() {
           svg.selectAll(".arc_b").remove()
           svg.selectAll(".arc_br").remove()
@@ -280,9 +261,7 @@
           bary = 133;
           d3.csv("2008-new_X.csv",plot_points)
         }
-
         d3.select("#B4 button").on("click", button4_click)
-
         function button4_click() {
           svg.selectAll(".arc_b").remove()
           svg.selectAll(".arc_br").remove()
@@ -330,7 +309,6 @@
           bary = 09;
           d3.csv("2008-new_X.csv",plot_points)
         }
-
         function plot_points(data) {
         // for Source circle logic
           var nestedo = d3.nest()
@@ -359,7 +337,6 @@
                             }
                           })
                           .entries(data);
-
           var ocolor = "red";
           var orig = svg.append('g')
                         .attr("class", "bubble")
@@ -372,22 +349,22 @@
                         .attr('cy', function(d) { return d.values['y']; })
                         .attr('r', function(d) {
                           if (d.values['city'].length <= m1) {
-                            return 2;
+                            return Math.sqrt(7);
                           }
                           if (d.values['city'].length > m1 & d.values['city'].length <= m2) {
-                            return 2.5;
+                            return Math.sqrt(8);
                           }
                           if (d.values['city'].length > m2 & d.values['city'].length <= m3) {
-                            return 3;
+                            return Math.sqrt(9);
                           }
                           if (d.values['city'].length > m3 & d.values['city'].length <= m4) {
-                            return 3.5;
+                            return Math.sqrt(10);
                           }
                           if (d.values['city'].length > m4 & d.values['city'].length <= m5) {
-                            return 4;
+                            return Math.sqrt(11);
                           }
                           if (d.values['city'].length > m5 & d.values['city'].length <= m6) {
-                            return 6;
+                            return Math.sqrt(18);
                           }
                         })
                         .style("fill",ocolor)
@@ -395,13 +372,11 @@
                         .attr('opacity',1)
                         .on("mouseover", mouseovero)
                         .on("mouseout", mouseout);
-
           function mouseovero(d) {
             d3.select(this).style("fill", "black");
             var mousecoord = [0,0];
             mousecoord = d3.mouse(this);
             var flag = 0;
-
             var text1 = svg.append('g')
                            .selectAll("text")
                            .data(nestedo)
@@ -417,21 +392,19 @@
                            .attr("font-weight","bold")
                            .attr("font-size",16)
                            .text(function(d) {               // define the text to display
-                             if ((Math.abs(d.values['x'] - mousecoord[0]) < 10) &&
-                                (Math.abs(d.values['y'] - mousecoord[1]) < 10) &&
+                             if ((Math.abs(d.values['x'] - mousecoord[0]) < 5) &&
+                                (Math.abs(d.values['y'] - mousecoord[1]) < 5) &&
                                 (flag == 0)) {
                                   flag = 1;
                                   return d.values['city'][0];
                                 }
                              });
           };
-
           function mouseoverd(d) {
             d3.select(this).style("fill", "black");
             var mousecoord = [0,0];
             mousecoord = d3.mouse(this);
             var flag = 0;
-
             var text1 = svg.append('g')
                            .selectAll("text")
                            .data(nestedd)
@@ -447,15 +420,14 @@
                            .attr("font-size",16)
                            .attr("font-weight","bold")
                            .text(function(d) {
-                             if ((Math.abs(d.values['x'] - mousecoord[0]) < 10) &&
-                                (Math.abs(d.values['y'] - mousecoord[1]) < 10) &&
+                             if ((Math.abs(d.values['x'] - mousecoord[0]) < 5) &&
+                                (Math.abs(d.values['y'] - mousecoord[1]) < 5) &&
                                 (flag == 0)) {
                                   flag = 1;
                                   return d.values['city'][0];
                                 }
                             }); // define the text to display
           };
-
           function mouseout(d) {
             d3.selectAll("#myText").remove();
             d3.selectAll("#myText1").remove();
@@ -463,7 +435,6 @@
             var mousecoord = [0,0];
             mousecoord = d3.mouse(this);
           };
-
           // for Destination circle logic
           var nestedd = d3.nest()
                           .key(function(d) {
@@ -491,7 +462,6 @@
                               }
                             })
                             .entries(data);
-
           var dcolor = "red";
           var dest = svg.append('g')
                         .attr("class", "bubble")
@@ -504,22 +474,22 @@
                         .attr('cy', function(d) { return d.values['y']; })
                         .attr('r', function(d) {
                           if (d.values['city'].length <= m1) {
-                            return 2;
+                            return Math.sqrt(7);
                           }
                           if (d.values['city'].length > m1 & d.values['city'].length <= m2) {
-                            return 2.5;
+                            return Math.sqrt(8);
                           }
                           if (d.values['city'].length > m2 & d.values['city'].length <= m3) {
-                            return 3;
+                            return Math.sqrt(9);
                           }
                           if (d.values['city'].length > m3 & d.values['city'].length <= m4) {
-                            return 3.5;
+                            return Math.sqrt(10);
                           }
                           if (d.values['city'].length > m4 & d.values['city'].length <= m5) {
-                            return 4;
+                            return Math.sqrt(11);
                           }
                           if (d.values['city'].length > m5 & d.values['city'].length <= m6) {
-                            return 6;
+                            return Math.sqrt(18);
                           }
                         })
                         .style("fill",dcolor)
@@ -528,10 +498,8 @@
                         .attr('opacity',1)
                         .on("mouseover", mouseoverd)
                         .on("mouseout", mouseout);
-
           draw_arc(data);
         };
-
         function draw_arc(data) {
           var count = 0;
           var perc  = 0;
@@ -547,7 +515,6 @@
               });
             }
           }
-
           perc = (count / data.length) * 100;
           var lineTransition = function lineTransition(path) {
             path.transition()
@@ -568,7 +535,6 @@
             interpolate = d3.interpolateString("0," + len, len + "," + len);
             return function(t) { return interpolate(t); };
           };
-
         svg.selectAll(".arc").remove();
 // flight path logic.
         var pathArcs = arcGroup.selectAll(".arc")
@@ -583,7 +549,6 @@
                                  'class': class_del
                                })
                                .call(lineTransition);
-
         svg.append("text")
            .attr("x", x_txt)
            .attr("y", y_txt)
@@ -592,7 +557,6 @@
            .attr("font-size",20)
            .attr("font-family","serif")
            .attr("font-weight","bold");
-
         svg.append("text")
            .attr("x", x_txt + 45 )
            .attr("y", y_txt)
